# HoloSimpCart-Net

./: .clang-format  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  App.config  Dockerfile  README.md  RuTakingTooLong.csproj  RuTakingTooLong.sln  compose.yml  docker-compose.yml  flake.nix  justfile  packages.config  template.env
CsCheatSheet/: Cs101.md  DosAndDonts.md  PostgreSQL101.md
Migrations/: 20250628161537_InitialCreate.Designer.cs  20250628161537_InitialCreate.cs  20250701132343_InitialCreate.Designer.cs  20250701132343_InitialCreate.cs  AppDbContextModelSnapshot.cs
Properties/: launchSettings.json
db-init/: db-init.sql
discord-net/: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  Makefile  RuTakingTooLong.csproj  discord-net.sln  flake.nix  justfile  packages.config  packages.lock.json
discord-net/MMOR.NET/: MMOR.NET.csproj  packages.lock.json
discord-net/Migrations/: 20251004161946_CommandVCS.Designer.cs  20251004161946_CommandVCS.cs
discord-net/Native/: .gitignore  Native.csproj  build.zig  build.zig.zon  build.zig.zon.nix  flake.nix  swig.i  zon2nix-fix.sh
discord-net/RuTakingTooLong/: RuTakingTooLong.csproj  packages.lock.json
python-service/: Dockerfile
python-uvicorn/: .gitignore  .taplo.toml  Containerfile  Dockerfile  flake.nix  main.py  pyproject.toml
python-uvicorn/app/: cli.py  main.py
python-uvicorn/app/services/: hello.py  manim_text.py
src/: AppDbContext.cs  Commands.cs  Consts.cs  DbHandler.cs  Main.cs  PsuedoDB.cs
src/data/: Cart.cs  (+5 more)
(+45 files in other folders)
