[project]
name = "python-uvicorn"
version = "2.3.1.0"
# dependencies = ["fastapi", "uvicorn", "pydantic", "manim"]

[tool.ruff.format]
indent-style = "space"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.dependencies]
fastapi = "*"
uvicorn = "*"
pydantic = "*"
manim = "*"

[tool.pixi.tasks]
run = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

